[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/powerup/negLife.gd" type="Script" id=1]
[ext_resource path="res://Img/Power/posX.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.6683, 37.6031 )

[node name="negLife" type="Area2D"]
modulate = Color( 1, 0, 0, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="." to="." method="_on_negLife_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
